SERVER-13026 clarify error message for invalid text index weights