src/mongo/db/fts/fts_spec_legacy.cpp
@@ -238,7 +238,10 @@ BSONObj FTSSpec::_fixSpecV1(const BSONObj& spec) {
     {
         BSONObjBuilder b;
         for (map<string, int>::iterator i = m.begin(); i != m.end(); ++i) {
-            uassert(17365, "score for word too high", i->second > 0 && i->second < MAX_WORD_WEIGHT);
+            uassert(17365,
+                    str::stream() << "text index weight must be in the exclusive interval (0,"
+                                  << MAX_WORD_WEIGHT << ") but found: " << i->second,
+                    i->second > 0 && i->second < MAX_WORD_WEIGHT);
             b.append(i->first, i->second);
         }
         weights = b.obj();
